[package]
name = "rust-usbtmc"
version = "0.1.2"
authors = ["Rogério Adriano <rogerioadris@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["usb", "usbtmc", "instruments"]
categories = ["hardware-support", "os"]

description = "USBTMC driver for controlling instruments over USB."
homepage = "https://github.com/rogerioadris/rust-usbtmc"
repository = "https://github.com/rogerioadris/rust-usbtmc"
documentation = "https://github.com/rogerioadris/rust-usbtmc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = { version = "0.9.0", optional = true }
libusbk = { version = "0.1.2", features = ["vendored"], optional = true }
byteorder = "1.4"

[features]
# default = ["rusb"]
default = ["libusbk"]
rusb = ["dep:rusb"]
libusbk = ["dep:libusbk"]